APIs/microsoft.com/cognitiveservices-Training/3.1/java-client/README.md
# openapi-java-client

Custom Vision Training Client
- API version: 3.1
  - Build date: 2024-10-12T10:11:13.015357-04:00[America/New_York]
  - Generator version: 7.9.0

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)


*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>3.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:3.1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-3.1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.model.*;
import org.openapitools.client.api.DomainsApiApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://southcentralus.api.cognitive.microsoft.com/customvision/v3.1/training");

    DomainsApiApi apiInstance = new DomainsApiApi(defaultClient);
    UUID domainId = UUID.fromString("b30a91ae-e3c1-4f73-a81e-c270bff27c39"); // UUID | The id of the domain to get information about.
    String trainingKey = "{API Key}"; // String | API key.
    try {
      Domain result = apiInstance.getDomain(domainId, trainingKey);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling DomainsApiApi#getDomain");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://southcentralus.api.cognitive.microsoft.com/customvision/v3.1/training*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DomainsApiApi* | [**getDomain**](docs/DomainsApiApi.md#getDomain) | **GET** /domains/{domainId} | Get information about a specific domain.
*DomainsApiApi* | [**getDomains**](docs/DomainsApiApi.md#getDomains) | **GET** /domains | Get a list of the available domains.
*ImageApiApi* | [**createImageRegions**](docs/ImageApiApi.md#createImageRegions) | **POST** /projects/{projectId}/images/regions | Create a set of image regions.
*ImageApiApi* | [**createImageTags**](docs/ImageApiApi.md#createImageTags) | **POST** /projects/{projectId}/images/tags | Associate a set of images with a set of tags.
*ImageApiApi* | [**createImagesFromData**](docs/ImageApiApi.md#createImagesFromData) | **POST** /projects/{projectId}/images | Add the provided images to the set of training images.
*ImageApiApi* | [**createImagesFromFiles**](docs/ImageApiApi.md#createImagesFromFiles) | **POST** /projects/{projectId}/images/files | Add the provided batch of images to the set of training images.
*ImageApiApi* | [**createImagesFromPredictions**](docs/ImageApiApi.md#createImagesFromPredictions) | **POST** /projects/{projectId}/images/predictions | Add the specified predicted images to the set of training images.
*ImageApiApi* | [**createImagesFromUrls**](docs/ImageApiApi.md#createImagesFromUrls) | **POST** /projects/{projectId}/images/urls | Add the provided images urls to the set of training images.
*ImageApiApi* | [**deleteImageRegions**](docs/ImageApiApi.md#deleteImageRegions) | **DELETE** /projects/{projectId}/images/regions | Delete a set of image regions.
*ImageApiApi* | [**deleteImageTags**](docs/ImageApiApi.md#deleteImageTags) | **DELETE** /projects/{projectId}/images/tags | Remove a set of tags from a set of images.
*ImageApiApi* | [**deleteImages**](docs/ImageApiApi.md#deleteImages) | **DELETE** /projects/{projectId}/images | Delete images from the set of training images.
*ImageApiApi* | [**getImagesByIds**](docs/ImageApiApi.md#getImagesByIds) | **GET** /projects/{projectId}/images/id | Get images by id for a given project iteration.
*ImageApiApi* | [**getTaggedImageCount**](docs/ImageApiApi.md#getTaggedImageCount) | **GET** /projects/{projectId}/images/tagged/count | Gets the number of images tagged with the provided {tagIds}.
*ImageApiApi* | [**getTaggedImages**](docs/ImageApiApi.md#getTaggedImages) | **GET** /projects/{projectId}/images/tagged | Get tagged images for a given project iteration.
*ImageApiApi* | [**getUntaggedImageCount**](docs/ImageApiApi.md#getUntaggedImageCount) | **GET** /projects/{projectId}/images/untagged/count | Gets the number of untagged images.
*ImageApiApi* | [**getUntaggedImages**](docs/ImageApiApi.md#getUntaggedImages) | **GET** /projects/{projectId}/images/untagged | Get untagged images for a given project iteration.
*ImageApiApi* | [**querySuggestedImageCount**](docs/ImageApiApi.md#querySuggestedImageCount) | **POST** /projects/{projectId}/images/suggested/count | Get count of images whose suggested tags match given tags and their probabilities are greater than or equal to the given threshold. Returns count as 0 if none found.
*ImageApiApi* | [**querySuggestedImages**](docs/ImageApiApi.md#querySuggestedImages) | **POST** /projects/{projectId}/images/suggested | Get untagged images whose suggested tags match given tags. Returns empty array if no images are found.
*ImageRegionProposalApiApi* | [**getImageRegionProposals**](docs/ImageRegionProposalApiApi.md#getImageRegionProposals) | **POST** /projects/{projectId}/images/{imageId}/regionproposals | Get region proposals for an image. Returns empty array if no proposals are found.
*PredictionsApiApi* | [**deletePrediction**](docs/PredictionsApiApi.md#deletePrediction) | **DELETE** /projects/{projectId}/predictions | Delete a set of predicted images and their associated prediction results.
*PredictionsApiApi* | [**queryPredictions**](docs/PredictionsApiApi.md#queryPredictions) | **POST** /projects/{projectId}/predictions/query | Get images that were sent to your prediction endpoint.
*PredictionsApiApi* | [**quickTestImage**](docs/PredictionsApiApi.md#quickTestImage) | **POST** /projects/{projectId}/quicktest/image | Quick test an image.
*PredictionsApiApi* | [**quickTestImageUrl**](docs/PredictionsApiApi.md#quickTestImageUrl) | **POST** /projects/{projectId}/quicktest/url | Quick test an image url.
*ProjectApiApi* | [**createProject**](docs/ProjectApiApi.md#createProject) | **POST** /projects | Create a project.
*ProjectApiApi* | [**deleteIteration**](docs/ProjectApiApi.md#deleteIteration) | **DELETE** /projects/{projectId}/iterations/{iterationId} | Delete a specific iteration of a project.
*ProjectApiApi* | [**deleteProject**](docs/ProjectApiApi.md#deleteProject) | **DELETE** /projects/{projectId} | Delete a specific project.
*ProjectApiApi* | [**exportIteration**](docs/ProjectApiApi.md#exportIteration) | **POST** /projects/{projectId}/iterations/{iterationId}/export | Export a trained iteration.
*ProjectApiApi* | [**getExports**](docs/ProjectApiApi.md#getExports) | **GET** /projects/{projectId}/iterations/{iterationId}/export | Get the list of exports for a specific iteration.
*ProjectApiApi* | [**getImagePerformanceCount**](docs/ProjectApiApi.md#getImagePerformanceCount) | **GET** /projects/{projectId}/iterations/{iterationId}/performance/images/count | Gets the number of images tagged with the provided {tagIds} that have prediction results from  training for the provided iteration {iterationId}.
*ProjectApiApi* | [**getImagePerformances**](docs/ProjectApiApi.md#getImagePerformances) | **GET** /projects/{projectId}/iterations/{iterationId}/performance/images | Get image with its prediction for a given project iteration.
*ProjectApiApi* | [**getIteration**](docs/ProjectApiApi.md#getIteration) | **GET** /projects/{projectId}/iterations/{iterationId} | Get a specific iteration.
*ProjectApiApi* | [**getIterationPerformance**](docs/ProjectApiApi.md#getIterationPerformance) | **GET** /projects/{projectId}/iterations/{iterationId}/performance | Get detailed performance information about an iteration.
*ProjectApiApi* | [**getIterations**](docs/ProjectApiApi.md#getIterations) | **GET** /projects/{projectId}/iterations | Get iterations for the project.
*ProjectApiApi* | [**getProject**](docs/ProjectApiApi.md#getProject) | **GET** /projects/{projectId} | Get a specific project.
*ProjectApiApi* | [**getProjects**](docs/ProjectApiApi.md#getProjects) | **GET** /projects | Get your projects.
*ProjectApiApi* | [**publishIteration**](docs/ProjectApiApi.md#publishIteration) | **POST** /projects/{projectId}/iterations/{iterationId}/publish | Publish a specific iteration.
*ProjectApiApi* | [**trainProject**](docs/ProjectApiApi.md#trainProject) | **POST** /projects/{projectId}/train | Queues project for training.
*ProjectApiApi* | [**unpublishIteration**](docs/ProjectApiApi.md#unpublishIteration) | **DELETE** /projects/{projectId}/iterations/{iterationId}/publish | Unpublish a specific iteration.
*ProjectApiApi* | [**updateIteration**](docs/ProjectApiApi.md#updateIteration) | **PATCH** /projects/{projectId}/iterations/{iterationId} | Update a specific iteration.
*ProjectApiApi* | [**updateProject**](docs/ProjectApiApi.md#updateProject) | **PATCH** /projects/{projectId} | Update a specific project.
*SuggestTagsAndRegionsApiApi* | [**suggestTagsAndRegions**](docs/SuggestTagsAndRegionsApiApi.md#suggestTagsAndRegions) | **POST** /projects/{projectId}/tagsandregions/suggestions | Suggest tags and regions for an array/batch of untagged images. Returns empty array if no tags are found.
*TagsApiApi* | [**createTag**](docs/TagsApiApi.md#createTag) | **POST** /projects/{projectId}/tags | Create a tag for the project.
*TagsApiApi* | [**deleteTag**](docs/TagsApiApi.md#deleteTag) | **DELETE** /projects/{projectId}/tags/{tagId} | Delete a tag from the project.
*TagsApiApi* | [**getTag**](docs/TagsApiApi.md#getTag) | **GET** /projects/{projectId}/tags/{tagId} | Get information about a specific tag.
*TagsApiApi* | [**getTags**](docs/TagsApiApi.md#getTags) | **GET** /projects/{projectId}/tags | Get the tags for a given project and iteration.
*TagsApiApi* | [**updateTag**](docs/TagsApiApi.md#updateTag) | **PATCH** /projects/{projectId}/tags/{tagId} | Update a tag.


## Documentation for Models

 - [BoundingBox](docs/BoundingBox.md)
 - [CustomVisionError](docs/CustomVisionError.md)
 - [Domain](docs/Domain.md)
 - [Export](docs/Export.md)
 - [Image](docs/Image.md)
 - [ImageCreateResult](docs/ImageCreateResult.md)
 - [ImageCreateSummary](docs/ImageCreateSummary.md)
 - [ImageFileCreateBatch](docs/ImageFileCreateBatch.md)
 - [ImageFileCreateEntry](docs/ImageFileCreateEntry.md)
 - [ImageIdCreateBatch](docs/ImageIdCreateBatch.md)
 - [ImageIdCreateEntry](docs/ImageIdCreateEntry.md)
 - [ImagePerformance](docs/ImagePerformance.md)
 - [ImagePrediction](docs/ImagePrediction.md)
 - [ImageProcessingSettings](docs/ImageProcessingSettings.md)
 - [ImageRegion](docs/ImageRegion.md)
 - [ImageRegionCreateBatch](docs/ImageRegionCreateBatch.md)
 - [ImageRegionCreateEntry](docs/ImageRegionCreateEntry.md)
 - [ImageRegionCreateResult](docs/ImageRegionCreateResult.md)
 - [ImageRegionCreateSummary](docs/ImageRegionCreateSummary.md)
 - [ImageRegionProposal](docs/ImageRegionProposal.md)
 - [ImageTag](docs/ImageTag.md)
 - [ImageTagCreateBatch](docs/ImageTagCreateBatch.md)
 - [ImageTagCreateEntry](docs/ImageTagCreateEntry.md)
 - [ImageTagCreateSummary](docs/ImageTagCreateSummary.md)
 - [ImageUrl](docs/ImageUrl.md)
 - [ImageUrlCreateBatch](docs/ImageUrlCreateBatch.md)
 - [ImageUrlCreateEntry](docs/ImageUrlCreateEntry.md)
 - [Iteration](docs/Iteration.md)
 - [IterationPerformance](docs/IterationPerformance.md)
 - [Prediction](docs/Prediction.md)
 - [PredictionQueryResult](docs/PredictionQueryResult.md)
 - [PredictionQueryTag](docs/PredictionQueryTag.md)
 - [PredictionQueryToken](docs/PredictionQueryToken.md)
 - [Project](docs/Project.md)
 - [ProjectSettings](docs/ProjectSettings.md)
 - [Region](docs/Region.md)
 - [RegionProposal](docs/RegionProposal.md)
 - [StoredImagePrediction](docs/StoredImagePrediction.md)
 - [StoredSuggestedTagAndRegion](docs/StoredSuggestedTagAndRegion.md)
 - [SuggestedTagAndRegion](docs/SuggestedTagAndRegion.md)
 - [SuggestedTagAndRegionQuery](docs/SuggestedTagAndRegionQuery.md)
 - [SuggestedTagAndRegionQueryToken](docs/SuggestedTagAndRegionQueryToken.md)
 - [Tag](docs/Tag.md)
 - [TagFilter](docs/TagFilter.md)
 - [TagPerformance](docs/TagPerformance.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization

Endpoints do not require authorization.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



